<resources>
    <string name="app_name">Timer</string>
    <string name="start">start</string>
    <string name="reset">reset</string>
    <string name="pause">pause</string>
    <string name="seconds">Seconds</string>
    <string name="minuets">Minuets</string>
    <string name="hours">Hours</string>
    <string name="resume">resume</string>
    <string name="always_on">Always On</string>
    <string name="high_perception">Scientific Mood</string>
</resources>